charts/services/radar/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-external
  namespace: default
spec:
  ports:
    - port: 9280
      targetPort: 9280
---
apiVersion: v1
kind: Endpoints
metadata:
  name: radarr-external
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.15.18
    ports:
      - port: 9280
